feat: implemented sidebar

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -40,6 +40,9 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+
+    --blue-0: 215, 87%, 61%;
+    --gray-0: 221, 13%, 42%;
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -66,6 +69,9 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+
+    --blue-0: 215, 87%, 61%;
+    --gray-0: 221, 13%, 42%;
   }
 }
 
@@ -84,30 +90,34 @@ body {
 }
 
 .bg-marketplace {
-    /* background-image: url('/marketPlace.png'); */
-    background-size: cover; /* Ensures the image covers the entire div */
-    background-position: center;
-    background-repeat: no-repeat;
-    
-    object-fit: cover; /* Centers the image */
-    width: 100%;
+  /* background-image: url('/marketPlace.png'); */
+  background-size: cover; /* Ensures the image covers the entire div */
+  background-position: center;
+  background-repeat: no-repeat;
+
+  object-fit: cover; /* Centers the image */
+  width: 100%;
 }
 
 .bg-marketplace::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: hsla(122, 42%, 26%, 0.4);/* Green overlay with 50% opacity */
-    z-index: 0; /* Ensure the overlay is behind the text */
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: hsla(
+    122,
+    42%,
+    26%,
+    0.4
+  ); /* Green overlay with 50% opacity */
+  z-index: 0; /* Ensure the overlay is behind the text */
 }
 
 @media screen and (min-width: 768px) {
   .container {
-  width: 80%;
-  margin: 0 auto;
+    width: 80%;
+    margin: 0 auto;
+  }
 }
-}
-
