feat: implement dashboard page

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -42,7 +42,11 @@ body {
     --radius: 0.5rem;
 
     --blue-0: 215, 87%, 61%;
+    --blue-1: 215, 84%, 36%;
+
     --gray-0: 221, 13%, 42%;
+
+    --green-0: 123, 45%, 51%;
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -71,7 +75,11 @@ body {
     --chart-5: 340 75% 55%;
 
     --blue-0: 215, 87%, 61%;
+    --blue-1: 215, 84%, 36%;
+
     --gray-0: 221, 13%, 42%;
+
+    --green-0: 123, 45%, 51%;
   }
 }
 
