--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -39,6 +39,8 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+
+    --green-2: 123, 43%, 43%;
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -65,6 +67,8 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+
+    --green-2: 123, 43%, 43%;
   }
 }
 
